fix: z-index 수정정

--- a/src/pages/Store/StoreDetailPage/StoreDetailPage.module.scss
+++ b/src/pages/Store/StoreDetailPage/StoreDetailPage.module.scss
@@ -364,5 +364,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 20;
   }
 }
